# WinControl

./: CMakeLists.txt  main.cpp  powercgf.cpp
include/: powercgf.h
